--- a/client/partials/customers.html
+++ b/client/partials/customers.html
@@ -1,3 +1,19 @@
 <div>
-  <h1>You are in the Customers partial</h1>
+  <h4>Add New Customers here</h4>
+  <form>
+    Customer Name: <input type = 'text' ng-model='newCustomer.name'>
+    <input type = 'submit' value = 'Create Customer!'>
+  </form>
+  <table>
+    <tr>
+      <th>Customer Name</th>
+      <th>Created At</th>
+      <th>Action</th>
+    </tr>
+    <tr>
+      <td>Brendan</td>
+      <td>Aug 12</td>
+      <td><button>Delete</button></td>
+    </tr>
+  </table>
 </div>
