--- a/client/partials/orders.html
+++ b/client/partials/orders.html
@@ -1,3 +1,34 @@
 <div>
-  <h1>This is the orders partial</h1>
+  <h4>Add New Orders!</h4>
+  <form>
+    Customer: <select>
+                <option>Brendan</option>
+              </select>
+    Product:   <select>
+                <option>Ninja Shoes</option>
+                <option>Ninja Bike</option>
+                <option>Ninja Whip</option>
+              </select>
+    Quantity: <select>
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+              </select>
+    <input type = 'submit' value = 'Make Order'>
+  </form>
+  <table>
+    <tr>
+      <th>Customer Name</th>
+      <th>Product</th>
+      <th>#</th>
+      <th>Date</th>
+    </tr>
+    <tr>
+      <td>Brendan</td>
+      <td>Ninja Shoes</td>
+      <td>2</td>
+      <td>Aug 11</td>
+    </tr>
+  </table>
 </div>
