--- a/client/partials/customers.html
+++ b/client/partials/customers.html
@@ -1,8 +1,8 @@
-<div>
+<div ng-controller = 'CustomersController'>
   <h4>Add New Customers here</h4>
   <form>
-    Customer Name: <input type = 'text' ng-model='newCustomer.name'>
-    <input type = 'submit' value = 'Create Customer!'>
+    Customer Name: <input type = 'text' ng-model='new_customer.name'>
+    <input type = 'submit' ng-click = 'addCustomer()' value = 'Create Customer!'>
   </form>
   <table>
     <tr>
