--- a/client/partials/customers.html
+++ b/client/partials/customers.html
@@ -10,10 +10,10 @@
       <th>Created At</th>
       <th>Action</th>
     </tr>
-    <tr>
-      <td>Brendan</td>
-      <td>Aug 12</td>
-      <td><button>Delete</button></td>
+    <tr ng-repeat = 'customer in customers | filter: filter_name | orderBy: created_at'>
+      <td ng-bind = 'customer.name'></td>
+      <td ng-bind = 'customer.created_at | date: "longDate"'></td>
+      <td><button ng-click = 'deleteCustomer(customer)'>Delete</button></td>
     </tr>
   </table>
 </div>
